css/AllCSS.css
/* ... */
#HomePage #FriendsContainer #Friends .Friend {
	border: 2px solid #090909;
	background: #282828;
	width: 114px;
	height: 135px;
	padding: 5px;
	text-align: center;
	margin-right: 5px;
	display: inline-block;
}

#HomePage #FriendsContainer #Friends .Friend a:hover #Name {
	text-decoration: underline;
}

#HomePage #FriendsContainer #Friends .Friend img {
	width: 100px;
	border: 2px solid #090909;
	background: #1a1919;
}

#HomePage #FriendsContainer #Friends .Friend #Name {
	vertical-align: middle;
	text-align: center;
	width: 124px;
	height: 30px;
	
	word-break: break-all;
	font-weight: bold;
}
#RecentlyPlayed h3,
#Favourites h3,
#FeedsContainer h2,
#FriendsContainer h3,
#FriendsContainer ul {
	margin:0px;
}

#RecentlyPlayed h3,
#Favourites h3 {
	margin-top: 10px;
	font-size: 15px;
}

#FeedsContainer {
	display: inline-block;
	width: 680px;
	vertical-align: top;
	margin-top: -117px;
	float: left;
	margin-left: 3px;
}

#FeedsContainer #Feeds {
	border: 2px solid black;
	border-bottom: 0;
	background: #222;
}

#FeedsContainer #Pager {
	border: 2px solid black;
	background: #222;
	padding: 16px;
	text-align: center;
}

#FeedsContainer #Submit {
	border: 2px solid black;
	background: #222;
	width: 656px;
	padding: 10px;
	white-space: nowrap;
	border-bottom: none;
}

#FeedsContainer #Submit input[type=text] {
	border: 2px solid black;
	background: #444;
	padding: 2px 4px;
	width: 514px;
	margin-right: 9px;
	color: white;
}

#FeedsContainer #Submit input[type=submit] {
	border: 2px solid black;
	background: black;
	color: white;
	padding: 4px 8px;
	padding: 2px 4px\9;
	width: 120px\9;
	font-weight: bold;
	font-family: punk;
}

#FeedsContainer #Submit input[type=submit]:hover {
	text-decoration: underline;
	background: #161616;
	cursor: pointer;
}

#FeedsContainer #Submit .Error {
	border: 1px solid white;
	background: #d00;
	padding: 4px;
	font-weight: bold;
}

#FeedsContainer #Submit .Success {
	border: 1px solid white;
	background: #080;
	padding: 4px;
	font-weight: bold;
}

#Feeds #FeedItem {
	padding: 10px;
}

#Feeds #FeedItem .User,
#Feeds #FeedItem #Content {
	vertical-align: middle;
}

#Feeds #FeedItem .User {
	text-align: center;
}

#Feeds #FeedItem .User img {
	width:90px;
	border: none;
}

#Feeds #FeedItem #Content code {
	padding: 5px;
	display:block;
	width: 542px;
	border: 2px solid black;
	background: #111;
	margin-bottom: 5px;
}

#Feeds #FeedItem #Content #DatePosted {
	color: lightgray;
	font-style: italic;
}

#FeedItem[template] {
	display: none;
}

#FeedItem[other] {
	background: #1a1a1a;
}

#FeedAndGames #ProfileGames {
	width: 204px;
	display: inline-block;
	float: left;
}

#FeedAndGames {
	float: left;
}

#RecentlyPlayed #Games,
#Favourites #Games {
	width: 200px;
	border: 2px solid black;
	background: #222;
}

#RecentlyPlayed #Games .Game,
#Favourites #Games .Game {
	padding: 5px;
}

#RecentlyPlayed #Games .Game a,
#Favourites #Games .Game a {
	width: 100%;
}

#RecentlyPlayed #Games .Game img, 
#Favourites #Games .Game img {
	display: block;
	width: 180px;
	height: 101px;
	margin: 0 auto;
	border:2px solid black;
}

#RecentlyPlayed #Games .Game #Name,
#RecentlyPlayed #Games .Game #Stats,
#Favourites #Games .Game #Name,
#Favourites #Games .Game #Stats {
	margin-left: 6px;
	display:block;
	width: 180px;
}

#Clearer {
	clear: both;
	margin-bottom:2px;
	margin-bottom:20px\9;
}

.DisplayMobileWarning {
	position: absolute;
	inset: 0;
	background: darkred;
	z-index: 999;
	font-weight: bold;
	color: white;
}

.DisplayMobileWarning #MobileWarningText {
	width: 331px;
	text-align: center;
	margin: 0 auto;
}

.DisplayMobileWarning #MobileWarningText h1 {
	margin: 10px auto;
}

